<?xml version="1.0"?>
<package format="2">
  <name>fake_qualisys</name>
  <version>0.1.0</version>
  <description>
    Publishes faked qualisys mocap data.
  </description>

  <maintainer email="julian.b.erskine@gmail.com">Julian Erskine</maintainer>
  <maintainer email="robin.zhongmou.li@gmail.com">Zhongmou LI</maintainer>
  <author email="julian.b.erskine@gmail.com">Julian Erskine</author>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- system dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>qualisys</build_depend>
  <build_depend>eigen</build_depend>


  <!-- run dependencies -->
  <exec_depend>qualisys</exec_depend>

<export>
</export>

</package>

  
